[project]
name = "golf-travel-agent"
version = "0.1.0"
description = "高尔夫旅行智能助手"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.1.0",
    "google-genai>=1.0.0",
    "langgraph>=1.0.6",
    "notion-client>=2.7.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "chainlit>=2.9.0",
    "cachetools>=5.3.0",
    # FastAPI 微服务
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
golf-travel-agent = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
